fixed border issues aligned in shipping cards homepage 05

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -1117,6 +1117,7 @@
         &::after {
           height: 2px;
           background-color: color(primary);
+          bottom: -2px;
         }
         .cards-ship__item-icon {
           color: color(gray-9);
